--- a/OL3MVC/Demo/Demo/packages.config
+++ b/OL3MVC/Demo/Demo/packages.config
@@ -13,5 +13,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Sammy.js" version="0.7.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
