--- a/OL3MVC/Demo/Demo/Demo.csproj
+++ b/OL3MVC/Demo/Demo/Demo.csproj
@@ -121,6 +121,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\animated-gif-online-creator.txt" />
+    <Content Include="Content\Images\loading-blue.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -131,7 +133,13 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="Scripts\app\AppLogic.js" />
     <Content Include="Scripts\app\routes.js" />
+    <Content Include="Scripts\app\Setup\Init.js" />
+    <Content Include="Scripts\app\Utils\Event.js" />
+    <Content Include="Scripts\app\Utils\Utils.js" />
+    <Content Include="Scripts\app\Views\Center.js" />
+    <Content Include="Scripts\app\Views\Layout.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
