--- a/OL3MVC/Demo/Demo/Demo.csproj
+++ b/OL3MVC/Demo/Demo/Demo.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\httpCredentials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\xDomainProxy.ashx.cs">
       <DependentUpon>xDomainProxy.ashx</DependentUpon>
@@ -205,7 +206,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
