Basic GetFeatureInfo implemented

--- a/OL3MVC/Demo/Demo/Demo.csproj
+++ b/OL3MVC/Demo/Demo/Demo.csproj
@@ -621,6 +621,11 @@
     <Content Include="Scripts\ol3-layerswitcher\src\logo.png" />
     <Content Include="Scripts\ol3-layerswitcher\src\ol3-layerswitcher.css" />
     <Content Include="Scripts\ol3-layerswitcher\src\ol3-layerswitcher.js" />
+    <Content Include="Scripts\ol3-popup\examples\popup.css" />
+    <Content Include="Scripts\ol3-popup\examples\popup.html" />
+    <Content Include="Scripts\ol3-popup\examples\popup.js" />
+    <Content Include="Scripts\ol3-popup\src\ol3-popup.css" />
+    <Content Include="Scripts\ol3-popup\src\ol3-popup.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
@@ -644,6 +649,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Welcome.cshtml" />
     <Content Include="Scripts\ol3-layerswitcher\README.md" />
+    <Content Include="Scripts\ol3-popup\README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
